Solved Issue #37: Add cycle paths model and views for allowing certain users to contribute this kind of info

--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= f.text_field :name, :class=> "span12", :placeholder => t('activerecord.attributes.route.name') %>
 
-<%= f.label :is_public, t('activerecord.attributes.route.details') %>
+<%= f.label :details, t('activerecord.attributes.route.details') %>
 <%= f.text_area :details, :rows => 5, :class=> "span12" %>
 
 <div class="small-field-with-label">
