--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,11 +1,16 @@
 <div class="floating-actions">
 	<ul class="nav nav-pills">
+		<li class="active"><%= link_to t('app.profiles.navbar.explore'), discover_index_path, :class => 'back' %></li>
 
 		<% if !current_user.nil? && current_user == @user %>
   		<li><%= link_to t('app.profiles.navbar.new_route'), new_route_path, :class => 'back' %></li>
-  		<li><%= link_to t('app.profiles.navbar.new_path'), new_route_path, :class => 'back' %></li>
+			<% if @user.can_contribute_to_city? %>
+  			<li><%= link_to t('app.profiles.navbar.new_path'), new_cycle_path_path, :class => 'back' %></li>
+			<% end %>
   		<li><%= link_to t('app.profiles.navbar.new_group'), new_cycling_group_path, :class => 'back' %></li>
 			<li class="active"><%= link_to t('app.profiles.navbar.sign_out'), destroy_user_session_path, :class => 'back' %></li>
+		<% else %>
+			<li class="active"><%= link_to t('app.profiles.navbar.sign_in'), new_user_session_path, :class => 'back' %></li>
 		<% end %>
   </ul>
 </div>
@@ -23,6 +28,11 @@
 			<li id="cycling-groups-status">
 				<%= link_to pluralized_link_name_for(@activities[:cycling_groups], :cycling_group), '#/cycling-groups' %>
 			</li>
+			
+			<li id="others-status">
+				<%= link_to pluralized_link_name_for(@activities[:others], :other), '#/others' %>
+			</li>
+			
 		</ul>
 		<div id="routes-container" class="content">
 			<% @activities[:routes].each do |route| %>
@@ -32,6 +42,11 @@
 		<div id="cycling-groups-container" class="content">
 			<% @activities[:cycling_groups].each do |cycling_group| %>
 				<%= render :partial => 'profiles/cycling_groups/cycling_group', :locals => {:cycling_group => cycling_group} %>				
+			<% end %>
+		</div>
+		<div id="others-container" class="content">
+			<% @activities[:others].each do |other| %>
+				<%= render :partial => 'profiles/shared/generic', :locals => {:other => other} %>				
 			<% end %>
 		</div>
 	</div>
