Solved Issue #35: Add actions on navbar on map layout and the Wikicleta logo at the left

--- a/app/assets/stylesheets/discover.css.scss
+++ b/app/assets/stylesheets/discover.css.scss
@@ -13,6 +13,13 @@ html, body {
     height:100%;
 }
 
+.top-bar {
+	.logo {
+		margin-top: 2.5px;
+		margin-left: 20px;
+	}
+}
+
 #header-container {
 	.logo-img {
 		margin-bottom: 10px;
