Fixed some UIX glitches on cycling-paths

--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -33,11 +33,11 @@
 				}
 			}
 			
-			.cycling-group:hover , .route:hover {
+			.cycling-group:hover , .route:hover, .cycle-path:hover {
 				border: 1px solid #9BBAF0;
 			}
 			
-			.route, .cycling-group {
+			.route, .cycling-group, .cycle-path {
 				padding: 5px;
 				border: 1px solid #DEEAF0;
 				margin-bottom: 10px;
