--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -27,6 +27,10 @@ h3 {
 	margin:0 !important;
 }
 
+.emphasize {
+	color: $wikicleta_orange;
+}
+
 .background-logo {
 	pointer-events:none;
 	position: fixed;
