--- a/app/views/user_settings/show.html.erb
+++ b/app/views/user_settings/show.html.erb
@@ -1,140 +1,69 @@
-<% content_for :panel do %>	
-	<div id="edit-profile" class="panel">
-		<div class="settings"></div>
-		<div class="inner-panel inner-panel-centered inner-panel-big">
-			<div class="content">
-				
-				<div class="row-fluid">
-					<%= render 'layouts/shared/notice' %>
-				</div>
-				
-				<div class="row-fluid">					
-					<p class="pull-left"><a href="<%= user_profile_path(@user.username) %>" class="btn btn-link"><i class="icon icon-chevron-left"></i> <%= t('actions.back') %></a></p>
-					<h3 class="pull-right">Tu perfil</h3>
-				</div>
-				
-				<div class="top-spaced">
-					<p class="section-title">Ajustes básicos de tu cuenta</p>
-					<div class="separator"></div>
-					<div class="row-fluid">
-						<%= form_for(@user, :url => user_settings_update_path(@user.username), :html => { :method => :put, :class => "form-horizontal top-spaced" }) do |f| %>
-							<div class="span2"></div>
-							<div class="span10">
-								<div class="control-group">
-									<%= f.label :username, :class => "control-label" %>
-									<div class="controls">
-									  <%= f.text_field :username %>
-									</div>
-								</div>
+<div class="floating-actions">
+	<ul class="nav nav-pills">
+		<li class="active"><%= link_to t('actions.back'), user_profile_path(@user.username), :class => 'back' %></li>
+  </ul>
+</div>
 
-								<div class="control-group">
-									<%= f.label :full_name, :class => "control-label" %>
-									<div class="controls">
-										<%= f.text_field :full_name %>
-									</div>
-								</div>
+<div class="profile">
+	<%= render 'shared/notifications' %>
+	<%= render :partial => 'profiles/main_user_info', :locals => {:user => @user} %>
+	<div class="box rounded-5">
+		<h5><%= t('app.profiles.settings.basics.title') %></h5>
+		<%= form_for(@user, :url => user_settings_update_path(@user.username), :html => { :method => :put, :class => "form-horizontal top-spaced" }) do |f| %>
+			<%= f.text_field :username, :placeholder => t('activerecord.attributes.user.username') %>
+		  <%= f.text_field :full_name, :placeholder => t('activerecord.attributes.user.full_name') %>
+			<%= f.email_field :email, :placeholder => t('activerecord.attributes.user.email') %>
+		  
+			<%= f.label :city %>
+			<%= f.select :city_id, options_from_collection_for_select(City.all, :id, :name, @user.city_id), {:include_blank => true} %>
+	  
+			<%= f.label :bio %>
+	  	<%= f.text_area :bio, :rows => 5, :cols => 30 %>
+	
+	  	<%= f.text_field :personal_page, :placeholder => t('activerecord.attributes.user.personal_page') %>
+	
+			<%= f.label :started_cycling_date %>
+			<%= f.date_select :started_cycling_date, :discard_day => true %>
 
-								<div class="control-group">
-									<%= f.label :email, :class => "control-label" %>
-									<div class="controls">
-									  <%= f.email_field :email %>
-									</div>
-								</div>
-
-								<div class="control-group">
-									<%= f.label :city, :class => "control-label" %>
-									<div class="controls">
-								  	<%= f.select :city_id, options_from_collection_for_select(City.all, :id, :name, @user.city_id), {:include_blank => true} %>
-									</div>
-								</div>
-
-								<div class="control-group">
-									<%= f.label :bio, :class => "control-label" %>
-									<div class="controls">
-								  	<%= f.text_area :bio, :rows => 5, :cols => 30 %>
-									</div>
-								</div>
-
-								<div class="control-group">
-									<%= f.label :personal_page, :class => "control-label" %>
-									<div class="controls">
-								  	<%= f.text_field :personal_page %>
-									</div>
-								</div>
-
-								<div class="control-group">
-									<%= f.label :started_cycling_date, :class => "control-label" %>
-									<div class="controls select-cycling-date">
-										<%= f.date_select :started_cycling_date, :discard_day => true %>
-									</div>
-								</div>
-							</div>
-							<div class="centered-text">
-								<%= f.submit t('user_accounts.settings.save'), :class => 'btn btn-primary btn-large submitter' %>
-								<%= image_tag('mini_spinner.gif', :class => "spinner") %>
-							</div>
-						<% end %>
-					</div>
-					<br/>
-					<p class="section-title">Establece o actualiza tu foto de perfil</p>
-					<div class="separator"></div>
-					
-					<div class="row-fluid delete-current-picture">
-						<% unless @user.picture.nil? %>
-							<p>
-								<span>Si lo deseas, puedes eliminar la imagen actual: </span>
-								<%= link_to '<i class="icon-remove icon"></i> Eliminar'.html_safe, user_settings_destroy_pic_path(@user.username), :method => :delete, :class => "btn btn-danger pull-right" %>
-								</p>
-						<% end %>
-					</div>
-					<div class="row-fluid">
-							<%= form_tag user_settings_update_pic_path(@user.username), :multipart => true , :method => :put, :class => "form-horizontal" do %>
-								<div class="centered-text">
-									<div class="fileupload fileupload-new" data-provides="fileupload">
-										<div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
-											<% if !@user.picture.nil? && !@user.picture.image.url.nil? %>
-												<%= image_tag(@user.picture.image.url) %>
-											<% end %>
-										</div>
-										<div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
-									<div>
-									<span class="btn btn-file">
-										<span class="fileupload-new"><%= t('actions.input_file.select') %></span>
-										<span class="fileupload-exists"><%= t('actions.input_file.change') %></span>
-										<%= file_field_tag('file') %>
-									</span>
-									<a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('actions.input_file.remove') %></a>
-									</div>
-									</div>
-								</div>
-								
-								<div class="centered-text">
-									<%= submit_tag 'Subir', :class => "btn btn-info btn-large submitter" %>
-									<%= image_tag('mini_spinner.gif', :class => "spinner") %>
-								</div>
-							<% end %>
-						</div>
-					</div>
-				</div>
+			<div class="submit-area">
+				<%= f.submit t('actions.save'), :class => "submit-button" %>
+				<%= image_tag('mini_spinner.gif', :class => "spinner") %>
 			</div>
-		</div>
-	</div>
-<% end %>
-
-
-<% if 1 == 2%>
-<div class="well top-spaced">
-	<h4>Desactivar</h4>
-	<p>¿Por alguna razón deseas dar de baja tu cuenta?</p>
-	<div class="separator"></div>
-	<div class="row top-spaced">
-		<div class="span12">
-			<p class="pull-right">
-			<%= link_to t("user_accounts.settings.sections.account.deactivate"), account_deactivate_path, 
-				:confirm => t("user_accounts.settings.sections.account.deactivate_confirmation"), :method => :delete, :class => "btn btn-danger" %>
-			</p>
-		</div>
+		<% end %>
+		
+		<div class="separator"></div>
+		<br/>
+		<h4 class="emphasize">Establece o actualiza tu foto de perfil</h4>
+		<br/>
+		<% unless @user.picture.nil? %>
+			<p>
+				<span>Si lo deseas, puedes eliminar la imagen actual: </span>
+				<%= link_to '<i class="icon-remove icon"></i> Eliminar'.html_safe, user_settings_destroy_pic_path(@user.username), :method => :delete, :class => "btn btn-danger pull-right" %>
+				</p>
+		<% end %>
+		
+		<%= form_tag user_settings_update_pic_path(@user.username), :multipart => true , :method => :put, :class => "form-horizontal" do %>
+			<br/>
+			<div class="fileupload fileupload-new" data-provides="fileupload">
+				<div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
+					<% if !@user.picture.nil? && !@user.picture.image.url.nil? %>
+						<%= image_tag(@user.picture.image.url) %>
+					<% end %>
+					<div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
+				</div>
+				<span class="btn btn-file">
+					<span class="fileupload-new"><%= t('actions.input_file.select') %></span>
+					<span class="fileupload-exists"><%= t('actions.input_file.change') %></span>
+					<%= file_field_tag('file') %>
+				</span>
+				<a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('actions.input_file.remove') %></a>
+			</div>
+			<br/>
+			<div class="submit-area">
+				<%= submit_tag t('actions.save'), :class => "submit-button" %>
+				<%= image_tag('mini_spinner.gif', :class => "spinner") %>
+			</div>
+		<% end %>
 	</div>
 </div>
-<% end %>
 
