--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -5,7 +5,7 @@
 	
 	<div class="form">
 		<h2><%= t("user_accounts.forgot_password") %></h2>
-		
+		<p class="emphasize"><%= t('user_accounts.forgot_password_subtitle') %></p>
 		<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
 		  <%= devise_error_messages_for('password_recovery') %>
 			<div class="fields">
