--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -16,383 +16,237 @@ font-family: "gothamrndbold-Bold";
    src:url("/assets/gothamrndbold.ttf");
 }
 
-.text-orange {
-	color: $wikicleta_orange !important;
-}
-
-html, body { 
-	height: 100%;
-  background: url('/assets/background.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-	font-family: "gothamrndbook-Book" !important;
-}
-
 .landing {
-	min-width: 600px !important;
 	
-	#map
-	{
-	  width: 100%;
-	  height: 250px !important;
-	}
-	
-	.menu {
-		background-color: white !important;
-		
-		.header {
-			width: 100%; 
-	    height: 250px;
-			background: url(/assets/header-bg.png) repeat-x;
-			.header-m {
-				text-align: center;
-				position: relative;
-			}
-			
-			.android {
-				width: 180px;
-				right: 100px;
-				position: absolute;
-				top: 50px;
-			}
+	.right-positioned {
+		position: absolute;
+		right: 60px;
+		top: 100px;
+		opacity: 1;
+		a {
+			opacity: 0.5 !important;
 		}
 		
+		a:hover {
+			opacity: 1 !important;
+		}
 	}
 	
-	.top-bar {
-		position: relative;
-		width: 100% !important;
-		left: 0px;
-		z-index: 999;
-		border-top: 1px solid #EBF6FF;
-		
-		ul {
-			text-align: right;
-			margin-left: auto;
-			margin-right: auto;
-			margin-bottom: 0px;
-		}
+	.bottom-positioned {
+		position: absolute;
+		top: 55%;
+		right: 30px;
+		opacity: 0.3;
 	}
 	
 	.title {
+		font-size: 40px !important;
 		color: $wikicleta_orange;
-		margin-top: 15px;
-		font-weight: normal;
-		font-size: 17px;
-		text-transform: uppercase;
+		text-transform: none !important;
 	}
 	
-	.status {
-		margin-top: 30px;
+	.subtitle {
+		font-size: 25px !important;
+		color: $wikicleta_blue;
+		margin-top: 50px !important;
 	}
 	
-	.logo-container {
-		text-align: center;
-		margin-top: 40px;
+	.slogan {
+		margin-top: 50px;
+		font-size: 30px;
+		color: $wikicleta_orange;
 	}
 	
-	.pois {
-		min-width: 600px !important;
-		min-height: 80px;
-		background-color: $wikicleta_blue;
-		color: white;
-		
-		.poi { 
-			text-align: center;
+	.minor {
+		margin-top: 60px;
+		font-size: 30px;
+		color: $wikicleta_blue;
+		line-height: 35px;
+	}
+	
+	.action-box-2, .action-box {
+		ul {
+			list-style: none;
+			margin: 0;
 			
-			> div {
+			li {
 				display: inline-block;
-				vertical-align: top;
-				min-width: 500px;
-				width: 33%;
-				height: 80px;
+				margin-right: 10px;
+				margin-left: 10px;
 				text-align: center;
-				> div {
-					margin-left: auto;
-					margin-right: auto;
-
-					> div {
-						text-align:left;
-						display: inline-block;
-						vertical-align: top;
-					}
-				}
-			}
-			
-			.contributor {
-
-				a.pic {
-					margin-top: 5px;
-					margin-left: 0px;
-					display: block;
-
-					img {
-						border-radius: 35px;
-					}
-				}
-
-				a {
-					color: $wikicleta_orange;
-				}
-
-				.name {
-					font-size: 25px;
-					color: $wikicleta_orange;
-					margin: 10px 0px 0px 20px;
-				}
-
-				p {
-					margin: 0px 0px 0px 20px;
-					font-size: 18px;
-				}
-			}
-
-			.opinion {
-				text-align: center;
-				font-size: 18px;
-				line-height: 80px;
-				
-				p {
-					vertical-align: middle;
-					font-style: italic;
-				}
-				
-				.emph {
-					font-size: 40px;
-					color: $wikicleta_orange;
-				}
-				
-			}
-
-			.details {
-				
-				text-align: center;
-
-				p {
-					margin: 0;
-					padding: 0;
-				}
-
-				padding-left: 5%;
-				padding-right: 5%;
-				
-				.link {
-					margin-left: 20px;
-				}
 				
 				a {
-					color: white;
+					color: $wikicleta_blue;
 					font-size: 18px;
 				}
 				
 				a:hover {
 					color: $wikicleta_orange;
 				}
-				
-				.title {
-					font-size: 20px;
-					color: $wikicleta_orange;
-					margin-top: 10px;
-					font-weight: bold;
-				}
 			}
 		}
 	}
 	
-	.sections {
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: 10px;
+	.action {
+		padding: 20px;
+		background-color: rgba(255,255,255,0.7);
+		border: 1px solid white;
+		margin: 30px auto 0 auto;
 		text-align: center;
+		font-weight: bold;
+		width: 200px;
+		font-size: 25px;
 		
-		.section {
+		a {
+			color: $wikicleta_orange;
+		}
+	}
+	
+	.action:hover {
+		background-color: rgba(255,255,255,1);
+		border: 1px solid $wikicleta_light_blue;
+	}
+	
+	.action-box-2 {
+		margin: 10px auto 0 auto;
+		width: 55%;
+		padding: 10px 5px;
+		min-width: 1200px;
+		text-align: center;
+		z-index: 9999 !important;
+		p {
+			font-weight: bold;
+			color: white;
+			font-size: 18px;
+			margin: 0px;
+			padding: 0px;
+		}
+		
+		a {
+			color: white !important;
+		}
+		background-color: rgba(240,81,35,0.9);
+	}
+	
+	.action-box {
+		margin: 100px auto 0 auto;
+		width: 80%;
+		padding: 10px 5px;
+		background-color: rgba(255,255,255,0.5);
+	}
+	
+	.more-discrete {
+		background-color: rgba(255,255,255,0.2);
+		a {
+			font-size: 14px !important;
+		}
+	}
+	
+	.emphasize {
+		a {
+			color: $wikicleta_orange !important;
+		}
+	}
+	
+	.container {
+		min-width: 400px;
+		margin: 0 auto 0 auto;
+		text-align: center;
+		.column {
 			vertical-align: top;
-			border-radius: 0px;
-			-moz-box-shadow: 0 0 2px #BABABA;
-			-webkit-box-shadow: 0 0 2px #BABABA;
-			box-shadow: 0 0 2px #BABABA;
-			background: url(/assets/header-bg.png);
-			width: 600px;
-			display: inline-block;
-			border : 1px solid #D1DEFF;
-			margin: 20px 20px 50px 20px;
+			width: 45%;
+			display: inline-block !important;
 			
-			.title {
-				font-size: 25px;
-				padding: 15px;
-				text-transform: none;
-				color: $wikicleta_orange;
-				text-align: center;
-			}
-			
-			ul {
-				margin-left: 50px;
-			}
-			
-			.draw-two {
-				position: relative;
-				right: 0px;
-				float: right;
-				top: 30px;
-				width: 180px;
-			}
-			
-			.draw-one {
-				position: relative;
-				left: 0px;
-				top: 30px;
-				width: 180px;
-			}
-			
-			.draw-three {
-				position: relative;
-				right: 20px;
-				float: right;
-				top: 50px;
-				width: 180px;
-			}
-			
-			.action-box {
-				background-color: white;
-				border: 1px solid #AFCCFF;
-				border-radius: 5px;
-			}
-			
-			.big, .small {
-				text-transform: uppercase;
-			}
-			
-			.big {
-				color: $wikicleta_orange;
-				font-weight: bold;
-			}
-			
-			.small {
-				color: $wikicleta_blue;
-			}
-			
-			.action-box:hover {
-				-moz-box-shadow: 0 0 2px #BABABA;
-				-webkit-box-shadow: 0 0 2px #BABABA;
-				box-shadow: 0 0 2px #BABABA;
-			}
-			
-			.content-right {
-				width: 70%;
-				float: right;
-				font-size: 18px;
-				
-				.group {
-					width: 70px;
-					height: 70px;
-					overflow: hidden;
-					display: inline-block;
-					margin-left: 5px;
-				}
-				
-				.group-hidden {
-					display: none;
-				}
-				
-				ul {
-					list-style: none;
-					
-					li {
-						display: inline-block;
-						margin-top: 30px;
-						
-						a, a:hover {
-							text-transform: uppercase;
-							padding: 10px;
-							color: $wikicleta_orange;
-						}
-					}
-				}
+			.content-more-margin {
+				margin-top: 40% !important;
 			}
 			
 			.content {
-				width: 70%;
-				margin-left: 0px;
-				font-size: 18px;
-				
-				.status {
-					margin: 30px 0 0 0;
-					padding: 0;
-					.big {
-						font-size: 40px;
-					}
-					
-					.small {
-						margin-left: 10px;
-						font-size: 15px;
-					}
-				}
-				
-				.iconified {
-					padding: 8px;
-					display: block;
-					width: 160px;
-					height: 60px;
-					text-align: left;
-					margin-top: 20px;
-					margin-left: auto;
-					margin-right: auto;
-					
-					ul {
-						margin-left: 0;
-						li {
-							margin-left: 5px;
-							vertical-align: top;
-							display: inline-block;
-						}
-					} 
-
-					img {
-						width: 45px;
-					}
-					
-				}
+				margin-top: 50px;
 			}
 		}
 	}
-}
-
-.content {
-	color: $wikicleta_blue;
-	font-size: 15px;
-}
-
-.all-centered {
-	text-align: center;
-}
-
-.contact-form {
-	submit {
-		margin-top: 8px;
+	
+	#map
+	{
+	  width: 70% !important;
+		margin: 0 auto 50px auto;
+	  height: 300px !important;
+		border: 20px solid white;
 	}
-}
-
-.top-bar, .bottom-bar {
-	ul {
-		li {
+	
+	.poi {
+		display: none;
+		margin-left: auto;
+		margin-right: auto;
+		width: 620px;
+	}
+	
+	#poi-details {
+		background: #deedfe;
+		border-radius: 10px;
+		margin: 4% auto 2% auto;
+		padding: 10px;
+		
+		.core, .contributor {
 			display: inline-block;
-			list-style: none;
-			padding: 10px;
-			a {
-				text-decoration: none;
-				color: $wikicleta_blue;
-			}
-			a:hover {
-				color: $wikicleta_orange !important;
+		}
+		
+		.contributor {
+			vertical-align: top;
+			width: 150px;
+			text-align: center;
+			
+			.pic img {
+				border-radius: 35px;
 			}
 		}
+		
+		.core {
+			text-align: right !important;
+			width: 450px;
+			.title {
+				font-size: 13px !important;
+				text-transform: uppercase !important;
+				margin: 0px 10px 10px 0px !important;
+				text-align: right !important;
+				
+			}
+
+			.subtitle {
+				text-align: right !important;
+				margin: 0px 10px 5px 0px !important;
+				
+				font-weight: normal !important;
+				font-size: 18px !important;
+				color: $wikicleta_blue !important;
+			}
+
+			.details {
+				text-align: right !important;
+				text-align: justify;
+				font-size: 14px;
+				margin-right: 10px !important;
+			}
+			
+			.owner {
+				margin: 0px 10px 0px 0px !important;
+				font-style: italic;
+			}
+		}
+		
+	}
+	
+	.video-frame {
+		margin-top: 60px;
 	}
 }
 
-.email-dialog {
-	.title {
-		font-size: 20px;
-	}
+.text-orange {
+	color: $wikicleta_orange !important;
 }
+
+html, body { 
+	font-family: "gothamrndbook-Book" !important;
+}
+
