--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -5,6 +5,18 @@
 	
   <%= stylesheet_link_tag  "application" %>
 
+	<style >
+		body {
+			background: url('/assets/background.jpg') !important; 
+		  -webkit-background-size: cover;
+		  -moz-background-size: cover;
+		  -o-background-size: cover;
+		  background-size: cover;
+			height: 100%;
+			width: 100%;
+		}
+	</style>
+
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&sensor=true"></script>
 	<%= javascript_include_tag "application_map" %>
   <%= csrf_meta_tags %>
@@ -13,11 +25,7 @@
 </head>
 
 <body>
-	<%= render 'layouts/shared/commons' %>
 	<div class="landing">
-		<div class="background-logo"></div>	
-		<div class="menu"><%= render 'welcome/menu' %></div>
-		<div id="map"></div>
 		<%= yield %>
 	</div>
 </body>
