--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:section ,"Discover") %>
+<%= content_for(:section , t('app.views.discover.title')) %>
 <%= content_for(:klass, 'discover') %>
 <% content_for :panel do %>	
 	<div class="panel centered-text">
