--- a/app/views/trips/_listing.html.erb
+++ b/app/views/trips/_listing.html.erb
@@ -1,21 +1,8 @@
-<%= render :partial => 'discover/submenu', :locals => {:section => :trips, :trips_count => trips.count, :groups_count => '?'} %>
-
-<% if trips.empty? %>
-	<div class="row-fluid top-spaced empty-listing">
-		<div class="span12">
-			<p class="suggest centered-text"><%= t('trips.views.index.empty.message') %> <b class="blue">:(</b></p>
-			<p class="centered-text"><%= image_tag('empty_cycling.png', :size => '600x600') %></p>
-			<p class="centered-text"><a href='mailto:contacto@wikicleta.com' class='btn btn-info btn-small'><i class='icon icon-plus'></i> 
-			<%= t('trips.views.index.empty.suggest') %></a></p>       
-		</div>
+<div class="items-list listing-view">
+	<div class="listing-actions">
+		<%= link_to '<i class="icon-chevron-left"></i>  Regresar'.html_safe, trips_path.concat('#/'), :id => 'back-to-listing' %>
 	</div>
-<% else %>
-	<div class="items-list listing-view">
-		<div class="listing-actions">
-			<%= link_to '<i class="icon-chevron-left"></i>  Regresar'.html_safe, discover_trips_path.concat('#/'), :id => 'back-to-listing' %>
-		</div>
-		<% trips.each do |trip| %>
-			<%= render :partial => 'trips/trip', :locals => {:trip => trip} %>
-		<% end %>
-	</div>
-<% end %>
+	<% trips.each do |trip| %>
+		<%= render :partial => 'trips/trip', :locals => {:trip => trip} %>
+	<% end %>
+</div>
