--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,7 +1,11 @@
 <div class="top-bar">
 	<%= link_to image_tag('wikicleta-logo-navbar.png', :size => '175x45', :class => 'logo'), root_path %>
 	<ul class="to-right">
-		<li><%= link_to t('app.profiles.navbar.curated_trips'), trips_path, :class => 'back' %></li>
+		<% if current_path == discover_index_url %>
+			<li><%= link_to t('app.profiles.navbar.curated_trips'), trips_path, :class => 'back' %></li>
+		<% elsif current_path == trips_url %>
+			<li><%= link_to t('app.profiles.navbar.explore'), discover_index_path, :class => 'back' %></li>
+		<% end %>
 		<li><%= link_to t('app.profiles.navbar.new_route'), new_route_path, :class => 'back' %></li>
 		<li><%= link_to t('app.profiles.navbar.new_group'), new_cycling_group_path, :class => 'back' %></li>
 		<% if user_signed_in? %>
