--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,6 +1,7 @@
 <div class="floating-actions">
 	<ul class="nav nav-pills">
 		<li class="active"><%= link_to t('app.profiles.navbar.explore'), discover_index_path, :class => 'back' %></li>
+		<li class="active"><%= link_to t('app.profiles.navbar.curated_trips'), trips_path, :class => 'back' %></li>
 
 		<% if !current_user.nil? && current_user == @user %>
   		<li><%= link_to t('app.profiles.navbar.new_route'), new_route_path, :class => 'back' %></li>
