--- a/app/views/layouts/shared/_commons.html.erb
+++ b/app/views/layouts/shared/_commons.html.erb
@@ -1,1 +1,1 @@
-<div id="remote-server" data-assets-url="<%= root_url.concat('/assets') %>"></div>
+<div id="remote-server" data-assets-url="<%= root_url.concat('assets') %>"></div>
